# capcut-ai-editor

./: CLAUDE.md  README.md  pyproject.toml  todo.md
src/smartcut/: __init__.py  config.py  server.py
src/smartcut/core/: auphonic_client.py  capcut_draft.py  capcut_finder.py  capcut_reader.py  ffmpeg_utils.py  llm_client.py  models.py  whisper_client.py
src/smartcut/tools/: analyze.py  audio_enhance.py  audio_normalize.py  capcut_export.py  capcut_projects.py  smart_cut.py  subtitles.py  transcribe.py  video_export.py
