[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "capcut-ai-editor"
version = "0.1.0"
description = "MCP server for intelligent video editing - removes silences, detects duplicates, generates subtitles"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Dmitry" }
]
keywords = ["mcp", "video-editing", "capcut", "whisper", "transcription"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/smartcut"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
